deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deploy
  labels:
    app: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
        - name: flask
          image: flaskapp:v1
          ports:
            - containerPort: 80
