service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flaskapp     # This should match the app label in your Deployment
  ports:
    - protocol: TCP
      port: 80        # The port that the service will expose
      targetPort: 80  # The port your Flask app listens on in the container
